--- a/qrder-customer/package.json
+++ b/qrder-customer/package.json
@@ -36,6 +36,7 @@
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "2.4.7",
+    "@ionic-native/file": "^5.32.1",
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
