--- a/qrder-customer/package.json
+++ b/qrder-customer/package.json
@@ -23,7 +23,10 @@
     "@capacitor/core": "2.4.7",
     "@ionic-native/core": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "@types/hammerjs": "^2.0.39",
     "angularx-qrcode": "^11.0.0",
+    "hammerjs": "^2.0.8",
+    "ionic-long-press": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
