--- a/qrder-customer/package.json
+++ b/qrder-customer/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@capacitor/ios": "^3.0.0",
     "@ionic-native/core": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "@types/hammerjs": "^2.0.39",
