--- a/qrder-customer/package.json
+++ b/qrder-customer/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/android": "^3.0.0",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^3.0.0",
     "@ionic-native/core": "^5.32.1",
