--- a/qrder-customer/ios/App/App/capacitor.config.json
+++ b/qrder-customer/ios/App/App/capacitor.config.json
@@ -1,5 +1,6 @@
 {
   "appId": "io.ionic.starter",
+  "ios.minVersion": 12.0,
   "appName": "qrder-customer",
   "bundledWebRuntime": false,
   "npmClient": "npm",
